// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - ConfirmModal 1`] = `
<div
  id="default"
/>
`;

exports[`Mock render - default - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - default - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - default - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - default - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - default - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.bodyStyle: background: green - value[0] - ConfirmModal 1`] = `
<div
  id="properties.bodyStyle: background: green"
/>
`;

exports[`Mock render - properties.bodyStyle: background: green - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.bodyStyle: background: green - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.bodyStyle: background: green - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.bodyStyle: background: green - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.bodyStyle: background: green - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.cancelText: Cancel text - value[0] - ConfirmModal 1`] = `
<div
  id="properties.cancelText: Cancel text"
/>
`;

exports[`Mock render - properties.cancelText: Cancel text - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.cancelText: Cancel text - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.cancelText: Cancel text - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.cancelText: Cancel text - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.cancelText: Cancel text - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.centered: true - value[0] - ConfirmModal 1`] = `
<div
  id="properties.centered: true"
/>
`;

exports[`Mock render - properties.centered: true - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.centered: true - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.centered: true - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.centered: true - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.centered: true - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.closable: false - value[0] - ConfirmModal 1`] = `
<div
  id="properties.closable: false"
/>
`;

exports[`Mock render - properties.closable: false - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.closable: false - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.closable: false - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.closable: false - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.closable: false - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.content - value[0] - ConfirmModal 1`] = `
<div
  id="properties.content"
/>
`;

exports[`Mock render - properties.content - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.content - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.content - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.content - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.content - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.icon: AndroidFilled - value[0] - ConfirmModal 1`] = `
<div
  id="properties.icon: AndroidFilled"
/>
`;

exports[`Mock render - properties.icon: AndroidFilled - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.icon: AndroidFilled - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.icon: AndroidFilled - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.icon: AndroidFilled - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.icon: AndroidFilled - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.mask: false - value[0] - ConfirmModal 1`] = `
<div
  id="properties.mask: false"
/>
`;

exports[`Mock render - properties.mask: false - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.mask: false - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.mask: false - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.mask: false - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.mask: false - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.maskClosable: true - value[0] - ConfirmModal 1`] = `
<div
  id="properties.maskClosable: true"
/>
`;

exports[`Mock render - properties.maskClosable: true - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.maskClosable: true - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.maskClosable: true - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.maskClosable: true - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.maskClosable: true - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.modalStyle: background: yellow - value[0] - ConfirmModal 1`] = `
<div
  id="properties.modalStyle: background: yellow"
/>
`;

exports[`Mock render - properties.modalStyle: background: yellow - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.modalStyle: background: yellow - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.modalStyle: background: yellow - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.modalStyle: background: yellow - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.modalStyle: background: yellow - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.okText: Ok text - value[0] - ConfirmModal 1`] = `
<div
  id="properties.okText: Ok text"
/>
`;

exports[`Mock render - properties.okText: Ok text - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.okText: Ok text - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.okText: Ok text - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.okText: Ok text - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.okText: Ok text - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.status: confirm - value[0] - ConfirmModal 1`] = `
<div
  id="properties.status: confirm"
/>
`;

exports[`Mock render - properties.status: confirm - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.status: confirm - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.status: confirm - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.status: confirm - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.status: confirm - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - ConfirmModal 1`] = `
<div
  id="properties.status: error"
/>
`;

exports[`Mock render - properties.status: error - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - ConfirmModal 1`] = `
<div
  id="properties.status: info"
/>
`;

exports[`Mock render - properties.status: info - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.status: success - value[0] - ConfirmModal 1`] = `
<div
  id="properties.status: success"
/>
`;

exports[`Mock render - properties.status: success - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.status: success - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.status: success - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.status: success - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.status: success - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - ConfirmModal 1`] = `
<div
  id="properties.status: warning"
/>
`;

exports[`Mock render - properties.status: warning - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.title - value[0] - ConfirmModal 1`] = `
<div
  id="properties.title"
/>
`;

exports[`Mock render - properties.title - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.title - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.title - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.title - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.title - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.title is html - value[0] - ConfirmModal 1`] = `
<div
  id="properties.title is html"
/>
`;

exports[`Mock render - properties.title is html - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.title is html - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.title is html - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.title is html - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.title is html - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.width: 550px - value[0] - ConfirmModal 1`] = `
<div
  id="properties.width: 550px"
/>
`;

exports[`Mock render - properties.width: 550px - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.width: 550px - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.width: 550px - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.width: 550px - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.width: 550px - value[0] - ConfirmModal 6`] = `Array []`;

exports[`Mock render - properties.zIndex: 1100 - value[0] - ConfirmModal 1`] = `
<div
  id="properties.zIndex: 1100"
/>
`;

exports[`Mock render - properties.zIndex: 1100 - value[0] - ConfirmModal 2`] = `Array []`;

exports[`Mock render - properties.zIndex: 1100 - value[0] - ConfirmModal 3`] = `Array []`;

exports[`Mock render - properties.zIndex: 1100 - value[0] - ConfirmModal 4`] = `Array []`;

exports[`Mock render - properties.zIndex: 1100 - value[0] - ConfirmModal 5`] = `Array []`;

exports[`Mock render - properties.zIndex: 1100 - value[0] - ConfirmModal 6`] = `Array []`;
